<resources>
    <string name="app_name">DiceRollApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Start</string>
    <string name="about">Rules</string>
    <string name="roll">Roll</string>
    <string name="hold">Hold</string>
    <string name="quit">Quit</string>
    <string name="title">
        Pig
    </string>
    <string name="description">A dice game for two players, that you can play with one phone</string>
    <string name="player_one_turn">PLAYER 1\'s TURN</string>
    <string name="player_two_turn">PLAYER 2\'s TURN</string>
    <string name="score_1">P1 SCORE: 0</string>
    <string name="score_2">P2 SCORE: 0</string>
    <string name="player_one_score">P1 SCORE: %d</string>
    <string name="player_two_score">P2 SCORE: %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="p1victory">PLAYER 1 WINS!</string>
    <string name="p2victory">PLAYER 2 WINS!</string>
</resources>