<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview_score2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:fontFamily="monospace"
            android:text="@string/score_2"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/roll_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.805"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.962" />

        <Button
            android:id="@+id/quit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/roll_button"
            app:layout_constraintTop_toBottomOf="@+id/roll_button"
            app:layout_constraintVertical_bias="0.81" />

        <Button
            android:id="@+id/roll_button"
            android:layout_width="108dp"
            android:layout_height="66dp"
            android:layout_marginEnd="8dp"
            android:text="@string/roll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.897"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814" />

        <Button
            android:id="@+id/hold_button"
            android:layout_width="108dp"
            android:layout_height="66dp"
            android:layout_marginStart="8dp"
            android:text="@string/hold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/roll_button"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.815" />

        <TextView
            android:id="@+id/textview_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_one_turn"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/textview_score1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/score_1"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/hold_button"
            app:layout_constraintEnd_toStartOf="@+id/textview_score2"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_turn"
            app:layout_constraintVertical_bias="0.904" />

        <ImageView
            android:id="@+id/dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/sixsideddice1"
            app:layout_constraintBottom_toTopOf="@+id/textview_score1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_turn"
            app:layout_constraintVertical_bias="0.514" />

        <ImageView
            android:id="@+id/dice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sixsideddice2"
            app:layout_constraintBottom_toTopOf="@+id/textview_score2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/dice1"
            app:layout_constraintTop_toBottomOf="@+id/textview_turn"
            app:layout_constraintVertical_bias="0.515" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>